servicemesh/99_timeouts delete-me/backend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: training  
  name: backend
spec:
  hosts:
      - "backend.loodse.training"
  gateways:
    - gateway
  http:
    - route:
      - destination:
          host: backend.training.svc.cluster.local
          subset: v1
        port:
          number: 8080
      timeout: 25s
