servicemesh/99_timeouts delete-me/frontend-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: training
  name: frontend
spec:
  host: "*"
  subsets:
    - name: v1
      labels:
        version: 1.0.0
